# hawa-be-sl2

./: .dockerignore  .gitignore  Dockerfile  PyWhatKit_DB.txt  index.py  pyproject.toml  requirements.txt  vercel.json
app/: main.py
app/api/: admin.py  admin_feedback.py  auth.py  compliance.py  feedback.py  weather.py  weather_realtime.py
app/core/: config.py  dependencies.py  exceptions.py  file_storage.py  privacy.py  rate_limit.py  security.py
app/db/: postgres.py
app/db/models/: __init__.py  compliance.py  feedback.py  user.py  weather_knowledge.py
app/services/auth/: schemas.py  service.py
app/services/compliance/: schemas.py  service.py
app/services/feedback/: schemas.py  service.py
app/services/notification/: __init__.py  whatsapp_service.py
app/services/weather/: __init__.py  ai_cache_service.py  groq_heatmap_tips_service.py  groq_service.py  heatmap_processor.py  openmeteo_service.py  realtime_warning_service.py  recommendation_service.py  scheduler.py  schemas.py  sheets_cache_service.py  spreadsheet_service.py  vector_service.py
app/services/whatsapp/: wa_client.py
scripts/: create_admin.py  fix_language_enum.py  fix_role_enum_case.py  generate_encryption_key.py  migrate_add_alert_fields.py  migrate_add_compliance_table.py  migrate_add_feedback_table.py  migrate_add_industry_role.py  migrate_add_personalization.py  migrate_all_tables.py  migrate_feedback_status_to_varchar.py  populate_weather_knowledge.py  send_whatsapp_warnings.py  setup_vector_db.py  test_neon_connection.py
